fix(Recipes): Correct width and padding between 'ul' and 'ol' lists, also set text-align to left

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 #recipes-body {
     background-color: rgb(230, 113, 71);
     color: rgb(0, 0, 0);
+    text-align: center;
 }
 #recipes-body h2 , p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -35,7 +36,17 @@ h4 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
 }
-.html-body li {
+.html-body li,
+#recipes-body ul > li {
+    padding: 3px;
     width: 200px;
     margin: 0 auto;
+    text-align: left;
+}
+ol li {
+    width: 600px;
+    height: auto;
+    margin: 0 auto;
+    text-align: left;
+    padding: 10px;
 }
